--- a/UF1/MP08UF1009_examen/index.html
+++ b/UF1/MP08UF1009_examen/index.html
@@ -7,56 +7,184 @@
     <title>MOVIDY</title>
   </head>
   <header>
-    <img src="img/logo.png" class="logo">
     <ul>
+      <img src="img/logo.png" id="logo">
       <a href="#di"><li>Documentals</li></a>
       <a href="#pp"><li>Películes</li></a>
       <a href="#ss"><li>Series</li></a>
 
-      <li class="centrado" id="empujado">Plu</li>
-      <li class="centrado">Twitter</li>
-      <li class="centrado">Facebook</li>
+      <li class="xarxes" id="empujado">Plu</li>
+      <li class="xarxes">Twitter</li>
+      <li class="xarxes">Facebook</li>
 
     </ul>
   </header>
-  <body>
-    <h1 id="di">Documentals interessants</h1>
-    <img src="img/1982Koyaanisqatsi.jpg" class="u">
-    <img src="img/2004YTuQueSabes.jpg" class="dos">
-    <img src="img/2005Earthlings.jpg"class="tres">
-    <img src="img/2007Helvetica.jpg"class="quatre">
-    <img src="img/2007Sicko.jpg"class="cinc">
-    <img src="img/2008Zeitgeist2.jpg"class="sis">
+    <h1>Documentals interessants</h1>
+    <div class="peli">
+      <img src="img/1982Koyaanisqatsi.jpg" alt="">
+      <h2>Koyaanisqatsi</h2>
+      <h3>1982</h3>
+      <h4>Documental</h4>
+    </div>
 
 
+    <div class="peli">
+      <img src="img/2004YTuQueSabes.jpg" alt="">
+      <h2>Y tu que sabes</h2>
+      <h3>2004</h3>
+      <h4>Documental</h4>
+    </div>
 
- <img src="img/2009ArtAndCopy.jpg" class="set">
- <img src="img/2009Home.jpg" class="vuit">
- <img src="img/2009RipARemixManifesto.jpg"class="nou">
- <img src="img/2010ComprarTirarComprar.jpg"class="deu">
- <img src="img/2010InsideJob.jpg"class="onze">
+    <div class="peli">
+      <img src="img/2005Earthlings.jpg" alt="">
+      <h2>Earthlings</h2>
+      <h3>2006</h3>
+      <h4>Documental</h4>
+    </div>
 
- <h1>Documentals vistos</h1>
- <img src="img/2011LaDoctrinaDeShock.jpg" class="dotze" id="gris">
- <img src="img/2012SearchingForSugarMan.jpg"class="tretze" id="gris">
- <img src="img/2012TheActOfKilling.jpg"class="catorze" id="gris">
- <img src="img/2013ElEspirituDel45.jpg"class="quinze" id="gris">
+    <div class="peli">
+      <img src="img/2007Helvetica.jpg" alt="">
+      <h2>Helvetica</h2>
+      <h3>2007</h3>
+      <h4>Documental</h4>
+    </div>
 
- <h1 id="pp">Pelicules pendents</h1>
- <img src="img/XXXXpeli.jpg"class="setze">
- <img src="img/XXXXpeli.jpg"class="disset">
+    <div class="peli">
+      <img src="img/2007Sicko.jpg" alt="">
+      <h2>Sicko</h2>
+      <h3>2007</h3>
+      <h4>Documental</h4>
+    </div>
 
- <h1>Pelicules vistes</h1>
- <img src="img/quasinegre.png"class="divuit">
- <img src="img/quasinegre.png"class="dinou">
+    <div class="peli">
+      <img src="img/2008Zeitgeist2.jpg" alt="">
+      <h2>Zeltgeist 2</h2>
+      <h3>2008</h3>
+      <h4>Documental</h4>
+    </div>
 
- <h1 id="#ss">Series seguint</h1>
- <img src="img/XXXXserie.jpg"class="vint">
- <img src="img/XXXXserie.jpg"class="vintiu">
+    <div id="netejar" class="peli">
+      <img src="img/2009ArtAndCopy.jpg" alt="">
+      <h2>Art&Copy</h2>
+      <h3>2009</h3>
+      <h4>Documental</h4>
+    </div>
 
- <h1>Series vistes</h1>
- <img src="img/quasinegre.png"class="vintidos" id="clar">
- <img src="img/quasinegre.png"class="vintitres" id="clar">
+    <div class="peli">
+      <img src="img/2009Home.jpg" alt="">
+      <h2>Home</h2>
+      <h3>2009</h3>
+      <h4>Documental</h4>
+    </div>
 
+    <div class="peli">
+      <img src="img/2009RipARemixManifesto.jpg" alt="">
+      <h2>Rip: A Remix Manifesto</h2>
+      <h3>2006</h3>
+      <h4>Documental</h4>
+    </div>
+
+    <div class="peli">
+      <img src="img/2010ComprarTirarComprar.jpg" alt="">
+      <h2>Comprar, Tirar, Comprar</h2>
+      <h3>2010</h3>
+      <h4>Documental</h4>
+    </div>
+
+    <div class="peli">
+      <img src="img/2010InsideJob.jpg" alt="">
+      <h2>Inside Job</h2>
+      <h3>2010</h3>
+      <h4>Documental</h4>
+    </div>
+
+    <h1>Documentals vistos</h1>
+    <div id="netejar" class="peli">
+      <img class="blancnegre" src="img/2011LaDoctrinaDeShock.jpg" alt="">
+      <h2>La Doctrina de Shock</h2>
+      <h3>2011</h3>
+      <h4>Documental</h4>
+    </div>
+
+    <div class="peli">
+      <img  class="blancnegre" src="img/2012SearchingForSugarMan.jpg" alt="">
+      <h2>Searching for Sugar Man</h2>
+      <h3>2012</h3>
+      <h4>Documental</h4>
+    </div>
+
+    <div class="peli">
+      <img class="blancnegre" src="img/2012TheActOfKilling.jpg" alt="">
+      <h2>The Act od Killing</h2>
+      <h3>2012</h3>
+      <h4>Documental</h4>
+    </div>
+
+    <div class="peli">
+      <img class="blancnegre" src="img/2013ElEspirituDel45.jpg" alt="">
+      <h2>El Espíritu del 45</h2>
+      <h3>2013</h3>
+      <h4>Documental</h4>
+    </div>
+
+    <h1>Películes pendents</h1>
+    <div class="peli">
+      <img src="img/XXXXpeli.jpg" alt="">
+      <h2>Títol</h2>
+      <h3>XXX</h3>
+      <h4>Peli</h4>
+    </div>
+
+    <div class="peli">
+      <img src="img/XXXXpeli.jpg" alt="">
+      <h2>Títol</h2>
+      <h3>XXX</h3>
+      <h4>Peli</h4>
+    </div>
+
+    <h1>Películes vistes</h1>
+    <div id="gris" class="peli">
+      <img src="img/XXXXpeli.jpg" alt="">
+      <h2>Títol</h2>
+      <h3>XXX</h3>
+      <h4>Peli</h4>
+    </div>
+
+    <div id="gris" class="peli">
+      <img src="img/XXXXpeli.jpg" alt="">
+      <h2>Títol</h2>
+      <h3>XXX</h3>
+      <h4>Peli</h4>
+    </div>
+
+    <h1>Series seguint</h1>
+    <div class="peli">
+      <img src="img/XXXXserie.jpg" alt="">
+      <h2>Títol</h2>
+      <h3>XXX</h3>
+      <h4>Serie</h4>
+    </div>
+
+    <div class="peli">
+      <img src="img/XXXXserie.jpg" alt="">
+      <h2>Títol</h2>
+      <h3>XXX</h3>
+      <h4>Serie</h4>
+    </div>
+
+    <h1>Series vistes</h1>
+    <div id="clar" class="peli">
+      <img src="img/XXXXserie.jpg" alt="">
+      <h2>Títol</h2>
+      <h3>XXX</h3>
+      <h4>Serie</h4>
+    </div>
+
+    <div id="clar" class="peli">
+      <img src="img/XXXXserie.jpg" alt="">
+      <h2>Títol</h2>
+      <h3>XXX</h3>
+      <h4>Serie</h4>
+    </div>
   </body>
 </html>
