--- a/UF1/MP08UF1010_retrat/index.html
+++ b/UF1/MP08UF1010_retrat/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang=ca dir="ltr">
-
   <head>
     <meta author="Joel" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El meu retrat</title>
     <link rel="stylesheet" href="css/estils.css">
   </head>
   <body id="jcosp">
+<div class="quadrat">
     <div class="cap">
       <div class="front"></div>
       <div class="ulls">
@@ -16,16 +16,13 @@
             <div class="pupila"></div>
           </div>
         </div>
-
         <div id="segon" class="esquerra">
           <div class="iris">
             <div class="brillo"></div>
             <div class="pupila"></div>
           </div>
         </div>
-
       </div>
-
       <div class="celles">
         <div class="cedreta">
           <div class="partu"></div>
@@ -38,7 +35,6 @@
           <div class="partres"></div>
         </div>
       </div>
-
       <div class="nas">
         <div class="centre">
           <div class="blancor"></div>
@@ -58,16 +54,16 @@
           </div>
         </div>
         <div class="perilleta">
-
         </div>
     </div>
     <div class="barbeta"></div>
+<div class="cabellera">
     <div class="primercabell cabell"></div>
     <div class="segoncabell cabell"></div>
     <div class="tercercabell cabell"></div>
+</div>
     <div class="pomulos"></div>
     <div class="ulleres">
-
       <div class="vidres"></div>
        <div class="finestres">
          <div class="superior"></div>
@@ -104,22 +100,9 @@
           <div class="f3 blanca"></div>
           <div class="f4 blanca"></div>
       </div>
-
-
       </div>
-
-      </div>
-      <div class="info">
-        <h1>TOQUI'M LES ULLERES ;)</h1>
       </div>
     </div>
-    <div class="monstre">
-      <div class="um1">
-        <div class="um2"></div>
-      </div>
-      <div class="bm1"></div>
-    </div>
-
     <div class="braç">
       <div class="metacarpi"></div>
       <div class="dit"></div>
@@ -127,5 +110,6 @@
       <div class="avantbraç">
       </div>
     </div>
+</div>
   </body>
 </html>
