--- a/UF4/MP08UF4000_responsive/index.html
+++ b/UF4/MP08UF4000_responsive/index.html
@@ -1,120 +1,57 @@
 <!DOCTYPE html>
-<html lang="ca">
-<head>
-  <meta name="author">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Responsive</title>
-  <link rel="stylesheet" href="desktop.css">
-  <link rel="stylesheet" href="mobile.css">
-</head>
-<body>
-  <nav>
-    <ul class="activitats">
-      <li class="uf1">UF1
-        <ul class="interior">
-          <a href="html/UF1/MP08UF001/index.html">
-            <li>Activitat1</li>
-          </a>
-          <a href="html/UF1/MP08UF002/index.html">
-            <li>Activitat2</li>
-          </a>
-          <a href="html/UF1/MP08UF003/index.html">
-            <li>Activitat3</li>
-          </a>
-          <a href="html/UF1/MP08UF004/index.html">
-            <li>Activitat4</li>
-          </a>
-          <a href="html/UF1/MP08UF005/index.html">
-            <li>Activitat5</li>
-          </a>
-          <a href="html/UF1/MP08UF006/index.html">
-            <li>Activitat6</li>
-          </a>
-          <a href="html/UF1/MP08UF007/index.html">
-            <li>Activitat7</li>
-          </a>
-        </ul>
-      </li>
-      <li class="uf2">UF2
-        <ul class="interior">
-          <a href="html/UF1/MP08UF001/index.html">
-            <li>Activitat1</li>
-          </a>
-          <a href="html/UF1/MP08UF002/index.html">
-            <li>Activitat2</li>
-          </a>
-          <a href="html/UF1/MP08UF003/index.html">
-            <li>Activitat3</li>
-          </a>
-          <a href="html/UF1/MP08UF004/index.html">
-            <li>Activitat4</li>
-          </a>
-          <a href="html/UF1/MP08UF005/index.html">
-            <li>Activitat5</li>
-          </a>
-          <a href="html/UF1/MP08UF006/index.html">
-            <li>Activitat6</li>
-          </a>
-          <a href="html/UF1/MP08UF007/index.html">
-            <li>Activitat7</li>
-          </a>
-        </ul>
-      </li>
-      <li class="uf3">UF3
-        <ul class="interior">
-          <a href="html/UF1/MP08UF001/index.html">
-            <li>Activitat1</li>
-          </a>
-          <a href="html/UF1/MP08UF002/index.html">
-            <li>Activitat2</li>
-          </a>
-          <a href="html/UF1/MP08UF003/index.html">
-            <li>Activitat3</li>
-          </a>
-          <a href="html/UF1/MP08UF004/index.html">
-            <li>Activitat4</li>
-          </a>
-          <a href="html/UF1/MP08UF005/index.html">
-            <li>Activitat5</li>
-          </a>
-          <a href="html/UF1/MP08UF006/index.html">
-            <li>Activitat6</li>
-          </a>
-          <a href="html/UF1/MP08UF007/index.html">
-            <li>Activitat7</li>
-          </a>
-        </ul>
-      </li>
-      <li class="uf4">UF4
-        <ul class="interior">
-          <a href="html/UF1/MP08UF001/index.html">
-            <li>Activitat1</li>
-          </a>
-          <a href="html/UF1/MP08UF002/index.html">
-            <li>Activitat2</li>
-          </a>
-          <a href="html/UF1/MP08UF003/index.html">
-            <li>Activitat3</li>
-          </a>
-          <a href="html/UF1/MP08UF004/index.html">
-            <li>Activitat4</li>
-          </a>
-          <a href="html/UF1/MP08UF005/index.html">
-            <li>Activitat5</li>
-          </a>
-          <a href="html/UF1/MP08UF006/index.html">
-            <li>Activitat6</li>
-          </a>
-          <a href="html/UF1/MP08UF007/index.html">
-            <li>Activitat7</li>
-          </a>
-        </ul>
-      </li>
-    </ul>
-  </nav>
-  <h1>Joel</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.lorem</p>
-</body>
+<html lang=ca dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>RESPONSIVE</title>
+    <link rel="stylesheet" href="estils.css">
+  </head>
+  <body>
+    <div id="alternador">
+      <input type="checkbox" id="alterna">
+      <label for="alterna">
+         <b></b>
+         <b></b>
+         <b></b>
+      </label>
+      <ul class="desplega">
+        <li><a href="#">UF1
+          <ul class="interior">
+            <a href="html/UF1/MP08UF001/index.html">
+              <li>Activitat1</li>
+            </a>
+            <a href="html/UF1/MP08UF002/index.html">
+              <li>Activitat2</li>
+            </a>
+            <a href="html/UF1/MP08UF003/index.html">
+              <li>Activitat3</li>
+            </a>
+            <a href="html/UF1/MP08UF004/index.html">
+              <li>Activitat4</li>
+            </a>
+            <a href="html/UF1/MP08UF005/index.html">
+              <li>Activitat5</li>
+            </a>
+            <a href="html/UF1/MP08UF006/index.html">
+              <li>Activitat6</li>
+            </a>
+            <a href="html/UF1/MP08UF007/index.html">
+              <li>Activitat7</li>
+            </a>
+          </ul>
+        </a></li>
+        <li><a href="#">UF2</a></li>
+        <li><a href="#">UF3</a></li>
+        <li><a href="#">UF4
+          <ul class="interior">
+            <a href="html/UF1/MP08UF001/index.html">
+              <li>Activitat1</li>
+            </a>
+          </ul>
+        </a></li>
+      </ul>
+    </div>
+
+    <h1>JOEL</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.lorem</p>
+  </body>
 </html>
