--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div id="principi" class="peli">
-      <h5>ARTS GRÀFIQUES</h5>
+      <h5>ARTES GRAFICAS</h5>
       <video muted autoplay loop>
         <source src="video/video1.mp4" type="video/mp4">
       </video>
