--- a/UF4/MP08UF4000_responsive/index.html
+++ b/UF4/MP08UF4000_responsive/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
-<html lang=ca dir="ltr">
+<html lang=ca dir="ltr" manifest="cache.manifest">
   <head>
     <meta charset="utf-8">
+
+    <meta name="theme-color" content="turquoise">
+    <meta name="msapplication-navbutton-color" content="turquoise">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="yes">
+
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon.png">
+    <link rel="icon" sizes="192x192" href="img/icon.png">
+    <link rel="icon" sizes="512x512" href="img/icon.png">
+    <link rel="apple-touch-icon" href="img/icon.png">
+
+
+
     <title>RESPONSIVE</title>
     <link rel="stylesheet" href="estils.css">
   </head>
