--- a/UF1/MP08UF1000/pagina web.html
+++ b/UF1/MP08UF1000/pagina web.html
@@ -3,6 +3,9 @@
   <head>
 
     <title>La meva primera pàgina</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta author="Natalia i Jordi">
     <meta lang="ca">
     <meta tag="alumnes, prova, web, inici">
