--- a/UF1/MP08UF1005_absolut/index.html
+++ b/UF1/MP08UF1005_absolut/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang=ca dir="ltr">
   <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta charset="utf-8">
       <title>ABSOLUTE</title>
     <link rel="stylesheet" href="css/print.css" media="print"> <!--media="" se usa para definir para que se usará-->
