--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </video>
     </div>
     <div class="capçalera">
-      <h1 class="portfoli">PORTFOLI PERSONAL</h1>
+      <h1 class="portfoli">PORTFOLIO PERSONAL</h1>
       <h1>RECLUTA 004, J.C.C</h1>
     </div>
     <div class="portada">
