--- a/UF1/MP08UF1004_float C/index.html
+++ b/UF1/MP08UF1004_float C/index.html
@@ -2,6 +2,9 @@
 <html lang=ca dir="ltr">
 
   <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta charset="utf-8">
     <meta author="Joel">
     <title>MP08UF1003_cosp</title>
