--- a/UF1/MP08UF1006_escacs/index.html
+++ b/UF1/MP08UF1006_escacs/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang=ca dir="ltr">
   <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta charset="utf-8">
     <title>ESCACS</title>
     <link rel="stylesheet" href="css/estils.css">
