--- a/UF1/MP08UF1010_retrat/index.html
+++ b/UF1/MP08UF1010_retrat/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang=ca dir="ltr">
   <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta author="Joel" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El meu retrat</title>
     <link rel="stylesheet" href="css/estils.css">
