--- a/WEBYOUWE/bustia.html
+++ b/WEBYOUWE/bustia.html
@@ -2,12 +2,26 @@
 <html lang="ca">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="bustia.css">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="bustia.css">
+
+<meta name="theme-color" content="turquoise">
+<meta name="msapplication-navbutton-color" content="turquoise">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="yes">
+
+<link rel="shortcut icon" type="image/x-icon" href="img/iconapp.png">
+<link rel="icon" sizes="192x192" href="img/iconapp.png">
+<link rel="icon" sizes="512x512" href="img/iconapp.png">
+<link rel="apple-touch-icon" href="img/iconapp.png">
+
   <title>BÚSTIA</title>
 </head>
 <body>
@@ -78,6 +92,22 @@
       <div id="carlos" class="capsa"></div>
       <div id="text" class="capsa">
         <h2>Carlos Vinyals</h2>
+        <h3>Okey!</h3>
+      </div>
+    </div>
+
+    <div class="contacte">
+      <div id="ester" class="capsa"></div>
+      <div id="text" class="capsa">
+        <h2>Maria Vinyals</h2>
+        <h3>Okey!</h3>
+      </div>
+    </div>
+
+    <div class="contacte">
+      <div id="iñaki" class="capsa"></div>
+      <div id="text" class="capsa">
+        <h2>Oscar Vidal</h2>
         <h3>Okey!</h3>
       </div>
     </div>
