--- a/WEBYOUWE/chat.html
+++ b/WEBYOUWE/chat.html
@@ -2,26 +2,39 @@
 <html lang="ca">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="chat.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="chat.css">
+
+<meta name="theme-color" content="turquoise">
+<meta name="msapplication-navbutton-color" content="turquoise">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="yes">
+
+<link rel="shortcut icon" type="image/x-icon" href="img/iconapp.png">
+<link rel="icon" sizes="192x192" href="img/iconapp.png">
+<link rel="icon" sizes="512x512" href="img/iconapp.png">
+<link rel="apple-touch-icon" href="img/iconapp.png">
   <title>CHAT</title>
 </head>
 <body>
-<div class="pagina">
   <div class="superior">
-    <a href="bustia.html"><div id="icono" class="element"></div></a>
+    <a href="bustia.html">
+      <div id="icono" class="element"></div>
+    </a>
     <div id="contacte" class="element"></div>
 
     <div id="puntsverticals" class="simbol"></div>
     <div id="tlf" class="simbol"></div>
     <div id="cam" class="simbol"></div>
   </div>
-
+<div class="pagina">
   <div id="primer" class="mensaje_izq">
     <h1>Hola! He vist la teva publicació!</h1>
     <h2>10:43</h2>
@@ -33,12 +46,9 @@
 
   <div id="tercer" class="mensaje_dre">
     <h1>Si siusplau, estic liadíssim!</h1>
-    <h2>10:44</h2>
   </div>
 
-  <div id="quart" class="mensaje_dre">
-    <h2 id="horeta">10:44</h2>
-  </div>
+  <div id="quart" class="mensaje_dre"></div>
 
   <div id="cinque" class="mensaje_izq">
     <h1>Ho carreguem tot i llest!</h1>
@@ -47,7 +57,6 @@
 
   <div id="sise" class="mensaje_dre">
     <h1>Perfecte, gràcies!</h1>
-    <h2 id="horeta">10:44</h2>
   </div>
 
   <div class="interaccio">
