--- a/WEBYOUWE/index.html
+++ b/WEBYOUWE/index.html
@@ -2,12 +2,25 @@
 <html lang="ca">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="benvinguda.css">
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=PT+Sans+Caption:wght@700&display=swap" rel="stylesheet">
-  <title>BENVINGUDA</title>
+
+  <link rel="stylesheet" href="benvinguda.css">
+
+  <meta name="theme-color" content="turquoise">
+  <meta name="msapplication-navbutton-color" content="turquoise">
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="yes">
+
+  <link rel="shortcut icon" type="image/x-icon" href="img/iconapp.png">
+  <link rel="icon" sizes="192x192" href="img/iconapp.png">
+  <link rel="icon" sizes="512x512" href="img/iconapp.png">
+  <link rel="apple-touch-icon" href="img/iconapp.png">
+
+  <title>YOUWE — BENVINGUDA</title>
 </head>
 <body>
   <div class="logo"></div>
