--- a/WEBYOUWE/test.html
+++ b/WEBYOUWE/test.html
@@ -2,7 +2,7 @@
 <html lang="ca">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=0.8, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
